Boton quitar playlist

--- a/playlist.html
+++ b/playlist.html
@@ -37,9 +37,7 @@
         </div>
     </header>
 
-    <!--GIfLoad  -->
-    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
-
+    
     <!--PlaylistGrid-->
     <container class="container-table">
         <div>
@@ -47,8 +45,8 @@
         </div>
         <table style="width: 90%;" class="table">
             <tr>
-                <th class="num">
-                    #
+                <th class="quit">
+                    <i class="fas fa-trash-alt"></i>
                 </th>
                 <th>
                     TÍTULO
@@ -65,6 +63,9 @@
             </tr>
         </table>
     </container>
+    
+    <!--GIfLoad  -->
+    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
 
     <!--footer-->
     <footer class="fplaylist">
@@ -102,7 +103,7 @@
             </ul>
         </section>
     </footer>
+
     <script src="./js/playlist.js"></script>
 </body>
-
 </html>
