--- a/search-results.html
+++ b/search-results.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Resultados de Búsqueda</title>
 </head>
@@ -105,6 +106,7 @@
             </ul>
         </section>
     </footer>
+
     <script src="./js/search-results.js"></script>
 </body>
 </html>
