Reorganizacion de Archivos

--- a/search-results.html
+++ b/search-results.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    
     <!-- header -->
     <header>
         <div class="logo">
@@ -37,6 +38,7 @@
             <div style="width:70%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/9roXsZPSSVT1kRzLM0" width="100%" height="100%" style="position:absolute" frameBorder="0" allowFullScreen></iframe></div>
         </div>
     </header>
+
     <!--Container-Resultados de Busqueda*/-->
     <container class="resultado-container">
         <h1>Resultados de Búsqueda</h1>
@@ -46,30 +48,14 @@
                 
             </ul>
         </article>
+
         <!--NoResultado-->
         <article class="article-noresultados">
         <h4>Lo sentimos, no se ha encontrado un resultado para tu búsqueda :(</h4>
         </article>
-        <article class="recomendado">
-            <!--<h4>Recomendados</h4>
-            <ul>
-                <li>
-                    <a href="./detail-track.html">Canción: Blinding Lights - The Weekend</a>
-                </li>
-                <li>
-                    <a href="./detail-album.html">Album: Stories - Avicii</a>
-                </li>
-                <li>
-                    <a href="./detail-artist.html">Artista: David Guetta</a>
-                </li>
-            </ul>
-            <div class="img-reco">
-                <a href="./detail-track.html"><img src="./img/img_canciones/blinding_lights.jpg" alt="canciónblindinglights"></a>
-                <a href="./detail-album.html"><img src="./img/img_albums/avicii-stories_album.jpg" alt="slbumavicii"></a>
-                <a href="./detail-artist.html"><img src="./img/img_artistas/david_guetta.jpg" alt="fotodavidguetta"></a>
-            </div>-->
-        </article>
+        <article class="recomendado"></article>
     </container>
+
     <!--footer-->
     <footer>
         <section class="contact">
