Boton borrar todo playlist, hover index y detail-track

--- a/detail-track.html
+++ b/detail-track.html
@@ -48,8 +48,8 @@
             <div class="track-data">
                 <div class="image-track"></div>
                 <h4 class="cancion"></h4>
-                <h4 class="album"></h4>
-                <h4 class="artista"></h4>
+                <h4 class="album-track"></h4>
+                <h4 class="artista-track"></h4>
                 <button class="agregarplaylist">Agregar a Playlist</button>
             </div>
             <div class="reproductor-track"></div>
