--- a/playlist.html
+++ b/playlist.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Playlist</title>
 </head>
@@ -62,6 +63,7 @@
                 </th>
             </tr>
         </table>
+        <button id="borrar">Borrar todo</button>
     </container>
     
     <!--GIfLoad  -->
