Bienvenida al usuario y boton quitarTodo playlist

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
         <div id="gifHeader">
             <div style="width:70%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/9roXsZPSSVT1kRzLM0" width="100%" height="100%" style="position:absolute" frameBorder="0" allowFullScreen></iframe></div>
+            <h5 id="bienvenida"></h5>
         </div>
     </header>
 
