--- a/playlist.html
+++ b/playlist.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Playlist</title>
 </head>
@@ -44,7 +43,10 @@
         <div>
             <h1 class="h1playlist"><strong>Tu Playlist</strong></h1>
         </div>
-        
+        <article id="vacia">
+            <h3>AÑADA CONTENIDO A SU PLAYLIST</h3>
+            <a href="./index.html">Click Aquí</a>
+        </article>
         <table style="width: 90%;" class="table">
             <tr>
                 <th class="quit">
@@ -71,7 +73,7 @@
     <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
 
     <!--footer-->
-    <footer class="fplaylist">
+    <footer>
         <section class="contact">
             <h4 class=""><strong>Contact</strong></h4>
             <article class="contentcontact">
