--- a/playlist.html
+++ b/playlist.html
@@ -65,13 +65,16 @@
                     <i class="far fa-clock"></i>
                 </th>
             </tr>
+            <!--GIfLoad  -->
+            <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
         </table>
         <button id="borrar">Borrar todo</button>
+        <section class="playlistReco">
+            <h4>Playlists recomendadas</h4>
+            <div class="recomendadas"></div>
+        </section>
     </container>
     
-    <!--GIfLoad  -->
-    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
-
     <!--footer-->
     <footer>
         <section class="contact">
