CSS detalle de genero y su responsive

--- a/detail-genres.html
+++ b/detail-genres.html
@@ -42,12 +42,7 @@
     <!--body-->
     <section class="detail-genres">
         <h1 class="nombreGenero"></h1>
-        
-        <article class="detail-genres">
-            <ul class="detailGenres">
-                
-            </ul>
-        </article>
+        <ul class="detailGenres"></ul>
     </section>
 
     <!--footer-->
