--- a/genres.html
+++ b/genres.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Géneros</title>
 </head>
+
 <body>
     <!-- header -->
     <header>
@@ -32,22 +33,25 @@
             </form>
         </div>
         <div id="gifHeader">
-            <div style="width:70%;height:0;padding-bottom:66%;position:relative;"><iframe src="https://giphy.com/embed/9roXsZPSSVT1kRzLM0" width="100%" height="100%" style="position:absolute" frameBorder="0" allowFullScreen></iframe></div>
+            <div style="width:70%;height:0;padding-bottom:66%;position:relative;"><iframe
+                    src="https://giphy.com/embed/9roXsZPSSVT1kRzLM0" width="100%" height="100%"
+                    style="position:absolute" frameBorder="0" allowFullScreen></iframe></div>
         </div>
     </header>
 
     <!--GIfLoad  -->
-    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%"
+            style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
 
     <!--body-->
     <container class="genres">
         <article class="genres">
             <h1>Géneros</h1>
             <ul class="genres-1">
-               
+
             </ul>
             <ul class="genres-2">
-                
+
             </ul>
             <ul class="genres-3">
 
@@ -96,4 +100,5 @@
     </footer>
     <script src="./js/genres.js"></script>
 </body>
+
 </html>
