--- a/search-results.html
+++ b/search-results.html
@@ -40,6 +40,8 @@
     </header>
 
     <!--Container-Resultados de Busqueda*/-->
+    <!--GIfLoad  -->
+    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="31%" height="31%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
     <container class="resultado-container">
         <h1>Resultados de Búsqueda</h1>
         <article class="article-resultado">
