Reorganización de CSS y Responsive de todas las páginas

--- a/detail-album.html
+++ b/detail-album.html
@@ -42,7 +42,7 @@
     <!--body-->
     <container class="container-album">
         <article class='album-image'></article>
-
+    </container>
         <!--footer-->
         <footer>
             <section class="contact">
