--- a/detail-genres.html
+++ b/detail-genres.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Detalle de Géneros</title>
 </head>
-<body>
+<body class="body-genres">
     <!-- header -->
     <header>
         <div class="logo">
