--- a/search-results.html
+++ b/search-results.html
@@ -40,21 +40,23 @@
     </header>
 
     <!--Container-Resultados de Busqueda*/-->
+
     <!--GIfLoad  -->
     <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="31%" height="31%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
     <container class="resultado-container">
+
         <h1>Resultados de Búsqueda</h1>
         <article class="article-resultado">
             <h2 class="busqueda"></h2>
-            <ul class="resultado">
-                
-            </ul>
+            <ul class="resultado"></ul>
         </article>
 
         <!--NoResultado-->
         <article class="article-noresultados">
         <h4>Lo sentimos, no se ha encontrado un resultado para tu búsqueda :(</h4>
         </article>
+
+        <!--Recomendado-->
         <article class="recomendado"></article>
     </container>
 
@@ -96,5 +98,6 @@
     </footer>
 
     <script src="./js/search-results.js"></script>
+
 </body>
 </html>
