--- a/genres.html
+++ b/genres.html
@@ -40,8 +40,7 @@
     </header>
 
     <!--GIfLoad  -->
-    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%"
-            style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+    <div class="gif"><iframe src="https://giphy.com/embed/kUTME7ABmhYg5J3psM" width="27%" height="27%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
 
     <!--body-->
     <container class="genres">
